# agent-dropbox

./: .gitignore  README.md
.github/workflows/: build-desktop.yml  deploy-website.yml
agent/: AGENT.md  Dockerfile  MEMORY.md  README.md
desktop/: index.html  package.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/auth/: store.rs
desktop/src-tauri/src/commands/: auth.rs  folders.rs  mod.rs  settings.rs  sync.rs
desktop/src-tauri/src/sync/: conflict.rs  diff.rs  engine.rs  manifest.rs  mod.rs  snapshot.rs  transfer.rs
desktop/src-tauri/src/tray/: mod.rs
desktop/src-tauri/src/watcher/: debouncer.rs
desktop/src/components/: AddFolder.tsx  ConflictDialog.tsx  Dashboard.tsx  FolderList.tsx  Login.tsx  Settings.tsx
desktop/src/lib/: tauri.ts  types.ts
scripts/: generate-token.py  generate-token.sh  install.sh  setup-server.sh
server/: config.py  database.py  main.py  models.py  requirements.txt
server/auth/: deps.py  token.py
server/s3/: client.py
server/storage/: __init__.py  router.py
server/sync/: router.py  schemas.py  service.py
website/: index.html
website/css/: style.css
website/js/: main.js
