[package]
name = "agent-dropbox"
version = "1.0.0"
edition = "2021"
description = "Agent Dropbox - Cross-platform file sync"

[lib]
name = "agent_dropbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "7"
notify-debouncer-mini = "0.5"
md-5 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
